// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [],
      "className": "css-0",
      "id": "default",
      "separator": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.list.icon - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <ItemLink
            className="css-0"
            link={
              Object {
                "icon": "SaveOutlined",
                "label": "label 1",
              }
            }
          >
            <IconBlock
              actions={Object {}}
              blockId="properties.list.icon_0_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                }
              }
              properties={
                Object {
                  "name": "SaveOutlined",
                  "style": Object {
                    "paddingRight": 8,
                  },
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
            label 1
          </ItemLink>
        </mockConstructor>,
        <mockConstructor>
          <ItemLink
            className="css-0"
            link={
              Object {
                "icon": "DeleteOutlined",
                "label": "label 2",
              }
            }
          >
            <IconBlock
              actions={Object {}}
              blockId="properties.list.icon_1_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                }
              }
              properties={
                Object {
                  "name": "DeleteOutlined",
                  "style": Object {
                    "paddingRight": 8,
                  },
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
            label 2
          </ItemLink>
        </mockConstructor>,
      ],
      "className": "css-0",
      "id": "properties.list.icon",
      "separator": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.list.icon with onClick - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor
          onClick={[Function]}
        >
          <ItemLink
            className="css-4g6ai3"
            link={
              Object {
                "icon": "SaveOutlined",
                "label": "label 1",
              }
            }
          >
            <IconBlock
              actions={Object {}}
              blockId="properties.list.icon with onClick_0_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                }
              }
              properties={
                Object {
                  "name": "SaveOutlined",
                  "style": Object {
                    "paddingRight": 8,
                  },
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
            label 1
          </ItemLink>
        </mockConstructor>,
        <mockConstructor
          onClick={[Function]}
        >
          <ItemLink
            className="css-4g6ai3"
            link={
              Object {
                "icon": "DeleteOutlined",
                "label": "label 2",
              }
            }
          >
            <IconBlock
              actions={Object {}}
              blockId="properties.list.icon with onClick_1_icon"
              content={Object {}}
              list={Array []}
              menus={Array []}
              methods={
                Object {
                  "callAction": [Function],
                  "makeCssClass": [Function],
                  "registerAction": [Function],
                  "registerMethod": [Function],
                }
              }
              properties={
                Object {
                  "name": "DeleteOutlined",
                  "style": Object {
                    "paddingRight": 8,
                  },
                }
              }
              required={false}
              user={Object {}}
              validation={
                Object {
                  "errors": Array [],
                  "status": null,
                  "warnings": Array [],
                }
              }
            />
            label 2
          </ItemLink>
        </mockConstructor>,
      ],
      "className": "css-0",
      "id": "properties.list.icon with onClick",
      "separator": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.list.label strings - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <ItemLink
            className="css-0"
            link="Page One"
          >
            Page One
          </ItemLink>
        </mockConstructor>,
        <mockConstructor>
          <ItemLink
            className="css-0"
            link="Page two"
          >
            Page two
          </ItemLink>
        </mockConstructor>,
      ],
      "className": "css-0",
      "id": "properties.list.label strings",
      "separator": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.list.pageId - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <ItemLink
            className="css-0"
            link={
              Object {
                "pageId": "page1",
              }
            }
          >
            page1
          </ItemLink>
        </mockConstructor>,
        <mockConstructor>
          <ItemLink
            className="css-0"
            link={
              Object {
                "pageId": "page2",
              }
            }
          >
            page2
          </ItemLink>
        </mockConstructor>,
      ],
      "className": "css-0",
      "id": "properties.list.pageId",
      "separator": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.list.pageId label and url - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <ItemLink
            className="css-0"
            link={
              Object {
                "pageId": "page1",
                "url": "https://www.url.com",
              }
            }
          >
            page1
          </ItemLink>
        </mockConstructor>,
        <mockConstructor>
          <ItemLink
            className="css-0"
            link={
              Object {
                "label": "label url",
                "url": "https://www.url.com",
              }
            }
          >
            label url
          </ItemLink>
        </mockConstructor>,
        <mockConstructor>
          <ItemLink
            className="css-0"
            link={
              Object {
                "label": "label pageId",
                "pageId": "page2",
              }
            }
          >
            label pageId
          </ItemLink>
        </mockConstructor>,
        <mockConstructor>
          <ItemLink
            className="css-0"
            link={
              Object {
                "pageId": "page3",
                "url": "https://docs.url.com",
              }
            }
          >
            page3
          </ItemLink>
        </mockConstructor>,
        <mockConstructor>
          <ItemLink
            className="css-0"
            link={
              Object {
                "label": "label4",
              }
            }
          >
            label4
          </ItemLink>
        </mockConstructor>,
      ],
      "className": "css-0",
      "id": "properties.list.pageId label and url",
      "separator": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.list.style - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <ItemLink
            className="css-14ksm7b"
            link={
              Object {
                "label": "Page One",
                "style": Object {
                  "color": "blue",
                },
              }
            }
          >
            Page One
          </ItemLink>
        </mockConstructor>,
        <mockConstructor>
          <ItemLink
            className="css-tokvmb"
            link={
              Object {
                "label": "Page two",
                "style": Object {
                  "color": "red",
                },
              }
            }
          >
            Page two
          </ItemLink>
        </mockConstructor>,
      ],
      "className": "css-0",
      "id": "properties.list.style",
      "separator": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.list.url - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <ItemLink
            className="css-0"
            link={
              Object {
                "url": "https://www.url.com",
              }
            }
          >
            https://www.url.com
          </ItemLink>
        </mockConstructor>,
        <mockConstructor>
          <ItemLink
            className="css-0"
            link={
              Object {
                "url": "https://docs.url.com",
              }
            }
          >
            https://docs.url.com
          </ItemLink>
        </mockConstructor>,
      ],
      "className": "css-0",
      "id": "properties.list.url",
      "separator": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.separator - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <ItemLink
            className="css-0"
            link={
              Object {
                "label": "Page One",
              }
            }
          >
            Page One
          </ItemLink>
        </mockConstructor>,
        <mockConstructor>
          <ItemLink
            className="css-0"
            link={
              Object {
                "label": "Page two",
              }
            }
          >
            Page two
          </ItemLink>
        </mockConstructor>,
      ],
      "className": "css-0",
      "id": "properties.separator",
      "separator": "->",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.style: fontSize: 18 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": Array [
        <mockConstructor>
          <ItemLink
            className="css-0"
            link={
              Object {
                "label": "Page One",
              }
            }
          >
            Page One
          </ItemLink>
        </mockConstructor>,
        <mockConstructor>
          <ItemLink
            className="css-0"
            link={
              Object {
                "label": "Page two",
              }
            }
          >
            Page two
          </ItemLink>
        </mockConstructor>,
      ],
      "className": "css-1flyc9m",
      "id": "properties.style: fontSize: 18",
      "separator": undefined,
    },
    Object {},
  ],
]
`;
